build preact frontend
